# phantom-nexus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/src/: lib.rs  phantom_vault.rs  phnx_token.rs  staking.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TOKENOMICS.md  WHITEPAPER.md
economy-engine/: Cargo.toml
economy-engine/src/: lib.rs
economy-engine/src/bridge/: mod.rs
economy-engine/src/defi/: mod.rs
economy-engine/src/tokenomics/: mod.rs
frontend/: index.html  package.json
frontend/src/: App.tsx
governance/: Cargo.toml
governance/src/: lib.rs
governance/src/dao/: mod.rs
governance/src/security/: mod.rs
nexus-chain/: Cargo.toml
nexus-chain/src/: lib.rs  types.rs
nexus-chain/src/consensus/: mod.rs  phantom_bft.rs
nexus-chain/src/crypto/: mod.rs  quantum_resistant.rs  ring_signatures.rs
nexus-chain/src/network/: mod.rs  stealth.rs
nexus-chain/src/storage/: mod.rs
oracle-swarm/: Cargo.toml
oracle-swarm/src/: lib.rs
phantom-agents/: Cargo.toml
phantom-agents/src/: comms.rs  core.rs  lib.rs  lifecycle.rs  orchestrator.rs  registry.rs  skills.rs
phantom-agents/src/divisions/: community_catalysts.rs  compliance_shadows.rs  consensus_guardians.rs  crosschain_diplomats.rs  emergency_response.rs  evolution_engineers.rs  governance_architects.rs  intelligence_harvesters.rs  iot_commanders.rs  metaverse_builders.rs  network_weavers.rs  oracle_sentinels.rs  privacy_phantoms.rs  risk_sentinels.rs  smart_contract_forge.rs  storage_alchemists.rs  tokenomics_engineers.rs
phantom-ai/: Cargo.toml
phantom-ai/src/: lib.rs
phantom-ai/src/neural/: evolution.rs  mod.rs  transformer.rs
phantom-ai/src/prediction/: market.rs  mod.rs
phantom-ai/src/swarm/: intelligence.rs  mod.rs
quantum-wallet/: Cargo.toml
quantum-wallet/src/: lib.rs
