[workspace]
members = [
    "nexus-chain",
    "phantom-ai",
    "economy-engine",
    "governance",
    "contracts",
    "oracle-swarm",
    "quantum-wallet",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KOSASIH <kosasihg88@gmail.com>"]
license = "MIT"
repository = "https://github.com/KOSASIH/phantom-nexus"
description = "Phantom Nexus - Autonomous Super AI Platform with Quantum-Resistant Blockchain"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
libp2p = "0.53"
pqcrypto = "0.17"
pqcrypto-traits = "0.3"
