[workspace]
members = [
    "nexus-chain",
    "phantom-ai",
    "economy-engine",
    "governance",
    "contracts",
    "oracle-swarm",
    "quantum-wallet",
    "phantom-agents",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phantom Nexus Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha3 = "0.10"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
dashmap = "5.5"
