[package]
name = "contracts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Smart Contracts - $PHNX token and Phantom Vault contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
log.workspace = true
