[package]
name = "governance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ghost Governance - Hantu DAO and self-healing security"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
