[package]
name = "nexus-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nexus Chain - Quantum-resistant Layer-1 blockchain with PhantomBFT consensus"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
libp2p.workspace = true
pqcrypto.workspace = true
pqcrypto-traits.workspace = true
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
blake3 = "1.5"

[[bin]]
name = "nexus-node"
path = "src/bin/node.rs"
