[package]
name = "quantum-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Quantum Wallet - Biometric + brainwave auth, unhackable design"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha3.workspace = true
log.workspace = true
thiserror.workspace = true
